compiler/testData/cli/jvm/useDeclarationThatWasExperimentalWithoutMarker.out
warning: language version 1.4 is deprecated and its support will be removed in a future version of Kotlin
compiler/testData/cli/jvm/useDeclarationThatWasExperimentalWithoutMarker.kt:2:8: error: unresolved reference: lowercase
    "".lowercase()
       ^
compiler/testData/cli/jvm/useDeclarationThatWasExperimentalWithoutMarker.kt:3:7: error: unresolved reference: digitToChar
    1.digitToChar()
      ^
COMPILATION_ERROR
