compiler/testData/cli/jvm/useDeclarationThatWasExperimentalWithoutMarker.kt
fun test() {
    "".lowercase()
    1.digitToChar()
}